--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ button{
     and I wouldn’t want to spend Valentine’s with anyone else 💕  
   </div>
 
-  <img src="photo.jpg" class="photo" alt="Us ❤️"/>
+  <img src="photo.jpg.HEIC" class="photo" alt="Us ❤️"/>
 
   <audio id="song" src="tere-liye.mp3"></audio>
 </div>
